--- a/miaumiaumiau.html
+++ b/miaumiaumiau.html
@@ -46,7 +46,7 @@ Rozmowa męża z żoną:
 - Piwo się skończyło! Skoczysz do sklepu?
 - Ale na zewnątrz jest lód, jeszcze się wywrócę!
 - To kup w puszce, żeby się nie stłukło.
-<IMG SRC="piwo.jpg" ALIGN=right BORDER=36 WIDTH=126 HEIGHT=112 ALT=„grafika1-klimko”>
+<IMG SRC="piwo.gif" ALIGN=right BORDER=36 WIDTH=126 HEIGHT=112 ALT=„grafika1-klimko”>
 
 </FIELDSET>
 
@@ -54,7 +54,7 @@ Rozmowa męża z żoną:
 <LEGEND> żart o jeżu</LEGEND>
 – Cześć jeż, co jesz?
 – Cześć zając, co zając?
-<IMG SRC="jez.jpg" ALIGN=left BORDER=14 WIDTH=104 HEIGHT=106 ALT=„grafika2-klimko”>
+<IMG SRC="jez.gif" ALIGN=left BORDER=14 WIDTH=104 HEIGHT=106 ALT=„grafika2-klimko”>
 
 </FIELDSET>
 
@@ -62,7 +62,7 @@ Rozmowa męża z żoną:
 <LEGEND> Żart o jasiu </LEGEND>
 - Jasiu, pospiesz się, bo spóźnisz się do szkoły!
 - Bez obawy tato, oni tam mają otwarte do 17:00.
-<IMG SRC="szkola.jpg" ALIGN=right BORDER=22 WIDTH=112 HEIGHT=126 ALT=„grafika3-klimko”>
+<IMG SRC="szkola.gif" ALIGN=right BORDER=22 WIDTH=112 HEIGHT=126 ALT=„grafika3-klimko”>
 
 </FIELDSET>
 
@@ -71,7 +71,7 @@ Rozmowa męża z żoną:
 Rozmawia dwóch dresów:
 - Ty, co to za gostkowie: Bach, Mozart, Bethoveen?
 - To równi kolesie. Piszą melodyjki do komóry.
-<IMG SRC="dres.jpg" ALIGN=left BORDER=16 WIDTH=106 HEIGHT=104 ALT=„grafika4-klimko”>
+<IMG SRC="dres.gif" ALIGN=left BORDER=16 WIDTH=106 HEIGHT=104 ALT=„grafika4-klimko”>
 </FIELDSET>
 
 <FIELDSET>
@@ -79,7 +79,7 @@ Rozmawia dwóch dresów:
 Podchodzi Anglik do Ślązaka:
 - Polish?
 - Nie, rzuciłem.
-<IMG SRC="slask.jpg" ALIGN=right BORDER=15 WIDTH=105 HEIGHT=105 ALT=„grafika5-klimko”>
+<IMG SRC="slask.gif" ALIGN=right BORDER=15 WIDTH=105 HEIGHT=105 ALT=„grafika5-klimko”>
 </FIELDSET>
 
 
