--- a/miaumiaumiau.html
+++ b/miaumiaumiau.html
@@ -90,9 +90,9 @@ Podchodzi Anglik do Ślązaka:
 
 <a name="środek"></a>
 <a href="poczta_klimko.html">poczta</a><br/>
-<a href="plik_klimko.html">plik do pobrania</a><br/>
+<a href="plik.html">plik do pobrania</a><br/>
 <a href="#gora">poczatek strony</a><br/>
-<a href="tabela_klimko.html">tabela</a><br/>
+<a href="tabela_klimko..html">tabela</a><br/>
 <a href="formularz.html">formularz</a><br/>
 			 
 			 <br/>
