--- a/miaumiaumiau.html
+++ b/miaumiaumiau.html
@@ -6,6 +6,15 @@
                  <title>Kamil</title>
           </head>
           <body>
+		  <a name="gora"></a>
+<a href="poczta_Klimko.html">poczta</a><br/>
+<a href="plik_Klimko.html">plik do pobrania</a><br/>
+<a href="#środek">środek strony</a><br/>
+<a href="#gora">poczatek strony</a><br/>
+<a href="tabela_Klimko.html">tabela</a><br/>
+<a href="formularz_Klimko.html">formularz</a><br/>
+<a href="walidacja_Klimko.html">walidator</a><br/>
+		  
 Kamil Klimko
 <p align="right"> <font color="red" size="4" face="Arial"> Kamil </font> </p> <br>
 <p align="right"> <font color="yellow" size="6" face="Arial"> Kamil </font> </p> <br>
