--- a/miaumiaumiau.html
+++ b/miaumiaumiau.html
@@ -7,13 +7,13 @@
           </head>
           <body>
 		  <a name="gora"></a>
-<a href="poczta_Klimko.html">poczta</a><br/>
-<a href="plik_Klimko.html">plik do pobrania</a><br/>
+<a href="poczta_klimko.html">poczta</a><br/>
+<a href="plik.html">plik do pobrania</a><br/>
 <a href="#środek">środek strony</a><br/>
 <a href="#gora">poczatek strony</a><br/>
-<a href="tabela_Klimko.html">tabela</a><br/>
-<a href="formularz_Klimko.html">formularz</a><br/>
-<a href="walidacja_Klimko.html">walidator</a><br/>
+<a href="tabela_klimko.html">tabela</a><br/>
+<a href="formularz.html">formularz</a><br/>
+<a href="walidacja_klimko.html">walidator</a><br/>
 		  
 Kamil Klimko
 <p align="right"> <font color="red" size="4" face="Arial"> Kamil </font> </p> <br>
@@ -171,13 +171,13 @@ Podchodzi Anglik do Ślązaka:
 
 
 <a name="dol"></a>
-<a href="poczta_Klimko.html">poczta</a><br/>
-<a href="plik_Klimko.html">plik do pobrania</a><br/>
+<a href="poczta_klimko.html">poczta</a><br/>
+<a href="plik.html">plik do pobrania</a><br/>
 <a href="#środek">środek strony</a><br/>
 <a href="#gora">poczatek strony</a><br/>
-<a href="tabela_Klimko.html">tabela</a><br/>
-<a href="formularz_Klimko.html">formularz</a><br/>
-<a href="walidacja_Klimko.html">walidator</a><br/>
+<a href="tabela_klimko.html">tabela</a><br/>
+<a href="formularz.html">formularz</a><br/>
+<a href="walidacja_klimko.html">walidator</a><br/>
 
 
 
