--- a/miaumiaumiau.html
+++ b/miaumiaumiau.html
@@ -15,7 +15,7 @@
 <a href="plik.html">plik do pobrania</a><br/>
 <a href="#środek">środek strony</a><br/>
 <a href="#gora">poczatek strony</a><br/>
-<a href="tabela_klimko.html">tabela</a><br/>
+<a href="tabela_klimko..html">tabela</a><br/>
 <a href="formularz.html">formularz</a><br/>
 <a href="walidacja_klimko.html">walidator</a><br/>	  
 		  
@@ -179,7 +179,7 @@ Podchodzi Anglik do Ślązaka:
 <a href="plik.html">plik do pobrania</a><br/>
 <a href="#środek">środek strony</a><br/>
 <a href="#gora">poczatek strony</a><br/>
-<a href="tabela_klimko.html">tabela</a><br/>
+<a href="tabela_klimko..html">tabela</a><br/>
 <a href="formularz.html">formularz</a><br/>
 <a href="walidacja_klimko.html">walidator</a><br/>
 
