--- a/formularz.html
+++ b/formularz.html
@@ -101,3 +101,48 @@
   <A HREF="miaumiaumiau.html">wróć</A>
  </body>
 </html>
+
+
+
+
+<!DOCTYPE html>
+<html lang="pl-PL">
+<html>
+
+<head>
+
+<meta charset="utf-8">
+
+<title> Kamil Klimko </title>
+</head>
+<body>
+<p align="right"> <font color="red" size="1" face="Arial"> Kamil </font> </p> <br>
+<p align="right"> <font color="red" size="2" face="Arial"> Kamil </font> </p> <br>
+<p align="right"> <font color="red" size="3" face="Arial"> Kamil </font> </p> <br>
+<p align="right"> <font color="red" size="4" face="Arial"> Kamil </font> </p> <br>
+<p align="right"> <font color="red" size="5" face="Arial"> Kamil </font> </p> <br>
+<p align="right"> <font color="red" size="6" face="Arial"> Kamil </font> </p> <br>
+<p align="right"> <font color="red" size="7" face="Arial"> Kamil </font> </p> <br>
+<h1> Klimko </h1><br>
+<h2> Klimko </h2><br>
+<h3> Klimko </h3><br>
+<h4> Klimko </h4><br>
+<h5> Klimko </h5><br>
+<h6> Klimko </h6><br>
+<p align="right"> <font color="green" size="6" face="Caslon"> :) usmiech </font> </p> <br>
+<p align="right"> <font color="blue" size="5" face="Utopia"> ;( smutek </font> </p> <br>
+<p align="right"> <font color="yellow" size="4" face="Arial"> :D smiech </font> </p> <br>
+<p align="right"> <font color="red" size="3" face="Calibri"> <3 serce </font> </p> <br>
+<p align="right"> <font color="black" size="2" face="Times New Roman"> :* buziak </font> </p> <br>
+<p align="right"> <font color="purple" size="1" face="Minion"> :P jezyk  </font> </p> <br>
+
+<p align="right">80-034 Gdańsk Anny Jagiellonki 13/3</p> <br>
+<center> <p>80-034 Gdańsk Anny Jagiellonki 13/3</p> </center><br>
+
+
+</body>
+
+
+
+
+</html>
